# dotfiles-utils

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  clocks.cpp  clocks.desktop  idle-menu.cpp  lock-menu.cpp  minibar.cpp  power-menu.cpp  screenfreeze.cpp  screenrecord-menu.cpp  screenshot-menu.cpp
sound/: README.md
